--- a/weather/package.json
+++ b/weather/package.json
@@ -8,11 +8,11 @@
   "dependencies": {
     "cookie-parser": "1.4.5",
     "debug": "4.3.2",
-    "dotenv": "10.0.0",
+    "dotenv": "16.4.5",
     "express": "4.17.1",
-    "http-errors": "1.8.0",
+    "http-errors": "2.0.0",
     "morgan": "1.10.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "3.2.2",
     "pug": "3.0.2"
   }
 }
